feat: Upgrade pdfchat to version 2.0.0 with enhanced features and new dependencies
- Updated project version to 2.0.0 and improved description in pyproject.toml.
- Added google-generativeai dependency (>=0.8.3) to enhance functionality.
- Downgraded cachetools version to 5.5.2 in uv.lock for compatibility.
- Introduced new dependencies including google-ai-generativelanguage, google-api-core, google-api-python-client, google-auth, and others in uv.lock.
- Updated protobuf version to 5.29.5 in uv.lock for stability.
- Added optional dependencies for grpc in uv.lock.
- Included new packages like httplib2, proto-plus, pyasn1, pyasn1-modules, rsa, and uritemplate in uv.lock to support new features.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "pdfchat"
-version = "0.1.0"
-description = "Add your description here"
+version = "2.0.0"
+description = "Enhanced PDFChat RAG Application with advanced features"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-generativeai>=0.8.3",
     "matplotlib>=3.10.3",
     "numpy>=2.3.1",
     "pandas>=2.3.1",
